examples/illformed/reserved_keyword.zn
func main() {
    let i32 = 10; // Error: 'i32' is a reserved keyword/type
}
